--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "async": "^3.1.0",
     "bunyan": "^1.8.12",
+    "camunda-external-task-client-js": "^1.1.1",
     "dotenv": "^8.0.0",
     "moment": "^2.24.0",
     "request": "^2.88.0",
