--- a/package.json
+++ b/package.json
@@ -5,32 +5,44 @@
   "main": "index.js",
   "scripts": {
     "test": "nyc mocha",
-    "start": "nodemon"
+    "start": "nodemon",
+    "example": "node example.js",
+    "watch": "tsc -p tsconfig.json -w"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^12.7.0",
     "async": "^3.1.0",
     "bunyan": "^1.8.12",
     "camunda-external-task-client-js": "^1.1.1",
     "dotenv": "^8.0.0",
+    "inversify": "^5.0.1",
+    "libxmljs": "^0.19.5",
     "moment": "^2.24.0",
+    "reflect-metadata": "^0.1.13",
     "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "restify": "^8.3.3",
     "restify-cors-middleware": "^1.1.1",
     "restify-router": "^0.5.1",
+    "typescript": "^3.5.3",
     "uuid": "^3.3.2",
     "xmldom": "^0.1.27",
     "xpath": "0.0.27"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
-    "mocha": "^6.1.4",
+    "mocha": "^6.2.0",
     "nodemon": "^1.19.1",
     "nyc": "^14.1.1",
     "superagent": "^5.1.0",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "ts-mockito": "^2.4.2",
+    "ts-node": "^8.3.0"
   }
 }
