Removed version files

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,16 @@
 NODE_ENV=''
 PORT=8081
+
+#EHR Server Credentials
 EHR_SERVER_HOST=''
 EHR_SERVER_USERNAME=''
 EHR_SERVER_PASSWORD=''
 EHR_SERVER_ORGANIZATION=''
+
+# Client options
 CAMUNDA_HOST=''
+WORKER_ID=''
+MAX_TASKS=10
+MAX_PARALLEL_EXECUTIONS=10
+INTERVAL=300
+LOCK_DURATION=15000
