Added Worker, Gateway and OPTService structure

--- a/package.json
+++ b/package.json
@@ -4,29 +4,40 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "pretest": "eslint --ignore-path .gitignore **/*.ts",
     "test": "nyc mocha",
     "start": "nodemon",
-    "example": "node example.js",
     "watch": "tsc -p tsconfig.json -w"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bunyan": "^1.8.6",
+    "@types/dotenv": "^6.1.1",
+    "@types/is-uuid": "^1.0.0",
     "@types/node": "^12.7.0",
+    "@types/request-promise": "^4.1.44",
+    "@types/restify": "^7.2.12",
+    "@types/restify-cors-middleware": "^1.0.1",
+    "@types/uuid": "^3.4.5",
+    "@types/xmldom": "^0.1.29",
     "async": "^3.1.0",
     "bunyan": "^1.8.12",
     "camunda-external-task-client-js": "^1.1.1",
     "dotenv": "^8.0.0",
     "inversify": "^5.0.1",
+    "is-uuid": "^1.0.2",
     "libxmljs": "^0.19.5",
     "moment": "^2.24.0",
+    "node-cache": "^4.2.1",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "restify": "^8.3.3",
     "restify-cors-middleware": "^1.1.1",
     "restify-router": "^0.5.1",
+    "ts-transformer-keys": "^0.3.5",
     "typescript": "^3.5.3",
     "uuid": "^3.3.2",
     "xmldom": "^0.1.27",
@@ -35,8 +46,12 @@
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.7",
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "@typescript-eslint/parser": "^2.0.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "eslint": "^6.2.1",
+    "eslint-config-strongloop": "^2.1.0",
     "mocha": "^6.2.0",
     "nodemon": "^1.19.1",
     "nyc": "^14.1.1",
