--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "strict": true,
     "module": "commonjs",
     "moduleResolution": "node",
     "target": "es2016",
@@ -15,7 +18,8 @@
     ],
     "typeRoots": [
       // add path to @types
-      "node_modules/@types"
+      "node_modules/@types",
+      "@types"
     ],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
